--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ align-items: center;
 font-size: 25px;
 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 border-radius: 5px;
+box-shadow: rgba(0, 0, 0, 0.6);
   }
 
 button {
